--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "next": "16.1.1",
     "react": "19.2.3",
+    "react-burger-menu": "^3.1.0",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
