Adminn updates and open_for_registration in camps added

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+.npm/
+.npm-cache/
+npm-debug.log*
+.yarn-cache/
 
 # testing
 /coverage
@@ -42,3 +46,5 @@ next-env.d.ts
 
 # Cursor
 .cursor
+
+
