--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-burger-menu": "^3.1.0",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "swr": "^2.3.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
