--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.2.3",
     "react-burger-menu": "^3.1.0",
     "react-dom": "19.2.3",
+    "swiper": "^12.1.1",
     "swr": "^2.3.8"
   },
   "devDependencies": {
